plugins {
    id 'com.google.cloud.tools.jib' version '3.3.2'
    id 'io.micronaut.application' version "4.5.4"
    id "com.diffplug.spotless" version "6.25.0"
    id "jacoco"
    id "idea"
}

// Automatically managed by commitizen (.cz.yaml)
version = "1.0.0"
group = "com.locust"

repositories {
    mavenCentral()
}


application {
    mainClass.set("com.locust.Application")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }

    sourceCompatibility = JavaVersion.toVersion("21")
    targetCompatibility = JavaVersion.toVersion("21")

}
graalvmNative.toolchainDetection = false
micronaut {
    runtime("netty")
    testRuntime("junit5")
    processing {
        incremental(true)
        annotations("com.*")
    }
}

test {
    // Disable parallel test execution to prevent resource conflicts between tests
    // that use mock Kubernetes API servers.
    maxParallelForks = 1
}

// don"t change apply ordering
apply from: "${rootDir}/gradle/dependencies.gradle"
apply from: "${rootDir}/gradle/testing.gradle"
apply from: "${rootDir}/gradle/spotless.gradle"
apply from: "${rootDir}/gradle/jib.gradle"
apply from: "${rootDir}/gradle/jacoco.gradle"
